--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <head>
 
   <meta charset="UTF-8">
-  <title>hello</title>
+  <title>Parrot</title>
   <meta name="viewport" content="width=device-width">
 
   <!--[if lt IE 9]>
@@ -20,8 +20,8 @@
 
 
   <header id="header">
-    <h1><a href="/"><i class="icon-sun"></i> {{ site.name }}</a></h1>
-    <p>{{ site.description }}</p>
+    <h1><a href="/"><i class="icon-sun"></i> dgsdfd</a></h1>
+    <p>This page is where I will be uploading projects i undertake and things i learn.</p>
   </header>
 
 
@@ -34,7 +34,7 @@
       <nav>
         <ul>
           <li><a href="/">Home</a></li>
-          <li><a href="/archives">Archive</a></li>
+          <li><a href="/archives">Archiv</a></li>
           <li><a href="/about">About</a></li>
           <li><a href="http://twitter.com/redwall_hp">Twitter</a></li>
           <li><a href="/feed.xml">RSS Feed</a></li>
