--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,8 +20,8 @@
 
 
   <header id="header">
-    <h1><a href="/"><i class="icon-sun"></i> dgsdfd</a></h1>
-    <p>This page is where I will be uploading projects i undertake and things i learn.</p>
+    <h1><a href="/"><i class="icon-sun"></i> Welcome to my page!</a></h1>
+    <p>This page is where I will be uploading projects I undertake and things I learn as I delve further into my Cyber Security career.</p>
   </header>
 
 
