--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,8 @@
 
 
   <header id="header">
-    <h1><a href="/"><i class="icon-sun"></i> Welcome to my page!</a></h1>
+    <!--h1><a href="/"><i class="icon-sun"></i> Welcome to my page!</a></h1-->
+    <h1><i class="icon-sun"></i>Welcome to my page!</h1>
     <p>This page is where I will be uploading projects I undertake and things I learn as I delve further into my Cyber Security career.</p>
   </header>
 
@@ -33,11 +34,15 @@
     <div id="sidebar">
       <nav>
         <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="/archives">Archiv</a></li>
-          <li><a href="/about">About</a></li>
-          <li><a href="http://twitter.com/redwall_hp">Twitter</a></li>
-          <li><a href="/feed.xml">RSS Feed</a></li>
+          <li><a href="/SANS">SANS foundation</a></li>
+          <li><a href="/thm">Tryhackme advent</a></li>
+          <li><a href="/Hackthebox">Hack The Box</a></li>
+          <li><a href="/cmds">Useful Linux Commands</a></li>
+          <li><a href="/Projects">Projects</a></li>
+          <li><a href="/Coding">Coding</a></li>
+          <li><a href="/Networks">Networks/Netkit</a></li>
+          <li><a href="/os">Operating Systems</a></li>
+          <li><a href="/math">Discrete Maths</a></li>
         </ul>
       </nav>
     </div>
