--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,10 +9,8 @@
   <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
-<!--
   <link href="/assets/css/style.css" rel="stylesheet" />
   <link href="/assets/css/colors-dark.css" rel="stylesheet" />
--->
 </head>
 
 <body>
@@ -49,13 +47,13 @@
 
 
 
-    <!--<div id="content">
-      {{ content }}
+    <div id="content">
+
     </div>
 
 
 
-  </div>-->
+  </div>
 
 
 
