--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,15 +32,15 @@
     <div id="sidebar">
       <nav>
         <ul>
-          <li><a href="/SANS">SANS foundation</a></li>
-          <li><a href="/thm">Tryhackme advent</a></li>
-          <li><a href="/Hackthebox">Hack The Box</a></li>
-          <li><a href="/cmds">Useful Linux Commands</a></li>
-          <li><a href="/Projects">Projects</a></li>
-          <li><a href="/Coding">Coding</a></li>
-          <li><a href="/Networks">Networks/Netkit</a></li>
-          <li><a href="/os">Operating Systems</a></li>
-          <li><a href="/math">Discrete Maths</a></li>
+          <li><a href="/../SANS">SANS foundation</a></li>
+          <li><a href="/../thm">Tryhackme advent</a></li>
+          <li><a href="/../Hackthebox">Hack The Box</a></li>
+          <li><a href="/../cmds">Useful Linux Commands</a></li>
+          <li><a href="/../Projects">Projects</a></li>
+          <li><a href="/../Coding">Coding</a></li>
+          <li><a href="/../Networks">Networks/Netkit</a></li>
+          <li><a href="/../os">Operating Systems</a></li>
+          <li><a href="/../math">Discrete Maths</a></li>
         </ul>
       </nav>
     </div>
